# pymscada-milp

./: pyproject.toml
docs/: Install.md  example.py
src/pymscada_milp/: model_hyd.py
tests/: test_model_hyd.py
tmp/: __mpc.debug  __mpc.lp  __mpc.output  __mpc.param  __mpc.rows_cols
