[project]
name = "pymscada-milp"
version = "0.0.3"
description = "MILP extension for pymscada"
authors = [
    {name = "Jamie Walton", email = "jamie@walton.net.nz"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# [tool.pdm]
# distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "flake8>=7.1.1",
    "flake8-docstrings>=1.7.0",
]

[project.scripts]
pymscada-milp = "pymscada_milp.__main__:cmd_line"
